--- a/prework-study-guide/assets/style.css
+++ b/prework-study-guide/assets/style.css
@@ -7,7 +7,7 @@
 footer {
     width: 100%;
     height: 120px;
-    background-color: blue;
+    background-color: NAVY;
     color: white;
 }
 
@@ -18,8 +18,8 @@ h2 {
 
 img {
     display: block;
-    height: 50px;
-    width: 50px;
+    height: 75px;
+    width: 75px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -37,6 +37,6 @@ p {
   .card {
     width: 80%;
     margin: 40px auto;
-    border: 5px solid #808080;
-    box-shadow: 5px 10px #888888;
+    border: 5px solid #008000;
+    box-shadow: 5px 10px #808000;
   }
